# obkey2

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/obkey2/: __main__.py  classes.py
